--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,10 @@
   font-family: roboto;
 }
 /* a common padding class for left right padding from the window edges */
-.padd {
-  padding: 0px 80px;
+.container {
+  /* padding: 0 200px; */
+  max-width: 1366px;
+  margin: 0 auto;
 }
 /* main footer container styling */
 footer {
@@ -17,7 +19,7 @@ footer {
   display: flex;
   flex-direction: column;
 }
-.section1 {
+.footerUpper {
   display: flex;
   /* section 1 height 150 px it contains follow us and social media links */
   height: 150px;
@@ -27,7 +29,7 @@ footer {
   /* justify-content: flex-end  for shifting everything to right */
   justify-content: flex-end;
 }
-.section1 > h4 {
+.footerUpper > h4 {
   /* Follow Us Styling */
   color: white;
   font-weight: 400;
@@ -46,19 +48,22 @@ footer {
   height: 100%;
 }
 .section2 {
-  /* section2 styling it contains the rest of design with upper and lower subsection */
   background-color: #151515;
+}
+.footerLower {
+  /* section2 styling it contains the rest of design with upper and lower subsection */
   height: 500px;
   width: 100%;
   display: flex;
   flex-direction: column;
   /* justify-content: space-between to seperate upper and lower section with extra space */
-  justify-content: space-between;
+  /* justify-content: space-between; */
   padding-top: 30px;
 }
 .upper {
   display: flex;
   height: 350px;
+  margin-bottom: 40px;
 }
 .corporate {
   /* corparate section with contact us information */
