--- a/styles.css
+++ b/styles.css
@@ -7,395 +7,261 @@
   font-family: roboto;
 }
 /* a common padding class for left right container from the window edges */
-@media (max-width: 2366px) {
+
+/* main footer container styling */
+footer {
+  /* height: 650px; */
+  background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+}
+.footerUpper {
+  display: flex;
+  /* section 1 height 150 px it contains follow us and social media links */
+
+  padding: 50px 0;
+  width: 100%;
+  align-items: center;
+  /* justify-content: flex-end  for shifting everything to right */
+  justify-content: flex-end;
+}
+.footerUpper > h4 {
+  /* Follow Us Styling */
+  color: white;
+  font-weight: 400;
+  margin: 0px 10px;
+  font-size: 25px;
+}
+.allLogos {
+  display: flex;
+  align-items: center;
+}
+.logos {
+  /* logo container styling */
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  margin: 0px 15px;
+}
+.logos img {
+  object-fit: contain;
+  height: 100%;
+}
+.section2 {
+  background-color: #151515;
+}
+.footerLower {
+  /* section2 styling it contains the rest of design with upper and lower subsection */
+  /* height: 500px; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between to seperate upper and lower section with extra space */
+  /* justify-content: space-between; */
+  padding-top: 30px;
+}
+
+.upper {
+  display: flex;
+  /* height: 350px; */
+  /* margin-bottom: 40px; */
+}
+
+.corporate {
+  /* corparate section with contact us information */
+  width: 25%;
+  /* width 25% of section2 */
+  height: 270px;
+  padding-right: 40px;
+  margin-right: 40px;
+  border-right: 1px solid rgba(255, 255, 255, 0.242);
+  padding-top: 5px;
+}
+.corporate > h2 {
+  /* corparate heading styling */
+  width: fit-content;
+  color: white;
+  font-size: 20px;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  font-weight: 400;
+  border-bottom: 2px solid;
+  border-image: linear-gradient(to right, cyan, blue, yellow) 1;
+  padding-bottom: 10px;
+}
+.corporate > p {
+  /* corparate contents styling */
+  color: #939393;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.subSection21 {
+  /* subsection21 is 75% of the upper section */
+  width: calc(75% - 40px);
+  display: flex;
+  flex-wrap: wrap;
+  /* wrap to wrap extra content to bottom */
+}
+.indiSection {
+  width: calc(25% - 20px);
+  /* every individual section maintaining 25% owidth of subSection21 */
+  margin-right: 20px;
+  padding-top: 5px;
+  display: flex;
+  flex-direction: column;
+}
+.indiSection > h2 {
+  /* individual section heading styling */
+  width: fit-content;
+  color: white;
+  font-size: 18px;
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  font-weight: 400;
+  border-bottom: 2px solid;
+  /* border image use to apply linear gradient on border */
+  border-image: linear-gradient(to right, cyan, blue, yellow) 1;
+  padding-bottom: 10px;
+}
+
+.indiSection > p {
+  /* individual section content styling */
+  position: relative;
+  color: rgba(255, 255, 255, 0.736);
+  font-size: 18px;
+  margin-bottom: 15px;
+  width: fit-content;
+  cursor: pointer;
+  display: inline-block;
+}
+.indiSection > p::after {
+  /* displayes a line with gradient and initially width 0 after the p tag element */
+  position: absolute;
+  content: "";
+  display: inline-block;
+
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(to right, cyan, blue, yellow);
+  height: 2px;
+  width: 0;
+}
+.indiSection > p:hover::after {
+  /* on hover width becomes 100% with transition effect */
+  transition: width ease-in-out 0.35s;
+  width: 100%;
+}
+
+.lower {
+  /* height: 100px; */
+  padding: 35px 0;
+  border-top: 1px solid #ffffff70;
+  display: flex;
+  /* justify-content: space-between use to have space between lower right and lower left containers */
+  justify-content: space-between;
+}
+.lowerLeft {
+  margin: auto 0px;
+  display: flex;
+}
+.lowerLeft > p {
+  color: #ffffff90;
+  font-size: 18px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+.lowerLeft > p:hover {
+  text-decoration: underline;
+}
+
+.lowerRight {
+  margin: auto 0px;
+}
+/* copyright styling */
+.lowerRight > p {
+  color: white;
+  font-size: 22px;
+}
+
+@media (min-width: 1400px) {
   .container {
-    max-width: 1366px;
+    max-width: 1400px;
     margin: 0 auto;
-  }
-  /* main footer container styling */
-  footer {
-    height: 650px;
-    background-color: #1f1f1f;
-    display: flex;
-    flex-direction: column;
-  }
-  .footerUpper {
-    display: flex;
-    /* section 1 height 150 px it contains follow us and social media links */
-    height: 150px;
-    padding: 25px auto;
-    width: 100%;
-    align-items: center;
-    /* justify-content: flex-end  for shifting everything to right */
-    justify-content: flex-end;
-  }
-  .footerUpper > h4 {
-    /* Follow Us Styling */
-    color: white;
-    font-weight: 400;
-    margin: 0px 10px;
-    font-size: 25px;
-  }
-  .logos {
-    /* logo container styling */
-    height: 30px;
-    width: 30px;
-    cursor: pointer;
-    margin: 0px 20px;
-  }
-  .logos img {
-    object-fit: contain;
-    height: 100%;
-  }
-  .section2 {
-    background-color: #151515;
-  }
-  .footerLower {
-    /* section2 styling it contains the rest of design with upper and lower subsection */
-    height: 500px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between to seperate upper and lower section with extra space */
-    /* justify-content: space-between; */
-    padding-top: 30px;
-  }
-
-  .upper {
-    display: flex;
-    height: 350px;
-    margin-bottom: 40px;
-  }
-
-  .corporate {
-    /* corparate section with contact us information */
-    width: 25%;
-    /* width 25% of section2 */
-    height: 250px;
-    padding-right: 40px;
-    margin-right: 40px;
-    border-right: 1px solid rgba(255, 255, 255, 0.242);
-    padding-top: 5px;
-  }
-  .corporate > h2 {
-    /* corparate heading styling */
-    width: fit-content;
-    color: white;
-    font-size: 20px;
-    margin-bottom: 40px;
-    text-transform: uppercase;
-    font-weight: 400;
-    border-bottom: 2px solid;
-    border-image: linear-gradient(to right, cyan, blue, yellow) 1;
-    padding-bottom: 10px;
-  }
-  .corporate > p {
-    /* corparate contents styling */
-    color: #939393;
-    font-size: 20px;
-    margin-bottom: 5px;
-  }
-  .subSection21 {
-    /* subsection21 is 75% of the upper section */
-    width: calc(75% - 40px);
-    display: flex;
-    flex-wrap: wrap;
-    /* wrap to wrap extra content to bottom */
-  }
-  .indiSection {
-    width: calc(25% - 10px);
-    /* every individual section maintaining 25% owidth of subSection21 */
-    margin-right: 10px;
-    padding-top: 5px;
-    padding-right: 10px;
-    display: flex;
-    flex-direction: column;
-  }
-  .indiSection > h2 {
-    /* individual section heading styling */
-    width: fit-content;
-    color: white;
-    font-size: 18px;
-    margin-bottom: 40px;
-    text-transform: uppercase;
-    font-weight: 400;
-    border-bottom: 2px solid;
-    /* border image use to apply linear gradient on border */
-    border-image: linear-gradient(to right, cyan, blue, yellow) 1;
-    padding-bottom: 10px;
-  }
-
-  .indiSection > p {
-    /* individual section content styling */
-    position: relative;
-    color: rgba(255, 255, 255, 0.736);
-    font-size: 18px;
-    margin-bottom: 15px;
-    width: fit-content;
-    cursor: pointer;
-  }
-  .indiSection > p::after {
-    /* displayes a line with gradient and initially width 0 after the p tag element */
-    position: absolute;
-    content: "";
-    display: inline-block;
-
-    left: 0;
-    bottom: 0;
-    background: linear-gradient(to right, cyan, blue, yellow);
-    height: 2px;
-    width: 0;
-  }
-  .indiSection > p:hover::after {
-    /* on hover width becomes 100% with transition effect */
-    transition: width ease-in-out 0.35s;
-    width: 100%;
-  }
-
-  .lower {
-    height: 100px;
-    border-top: 1px solid #ffffff70;
-    display: flex;
-    /* justify-content: space-between use to have space between lower right and lower left containers */
-    justify-content: space-between;
-  }
-  .lowerLeft {
-    margin: auto 0px;
-    display: flex;
-  }
-  .lowerLeft > p {
-    color: #ffffff90;
-    font-size: 18px;
-    margin-right: 20px;
-    cursor: pointer;
-  }
-  .lowerLeft > p:hover {
-    text-decoration: underline;
-  }
-
-  .lowerRight {
-    margin: auto 0px;
-  }
-  /* copyright styling */
-  .lowerRight > p {
-    color: white;
-    font-size: 22px;
   }
 }
 
-@media (max-width: 1450px) {
+@media (max-width: 1399px) {
   .container {
-    max-width: 1045px;
+    max-width: 1200px;
     margin: 0 auto;
   }
 }
-@media (max-width: 1045px) {
+
+@media (max-width: 1199px) {
+  .container {
+    max-width: 992px;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 991px) {
   .container {
     max-width: 768px;
     margin: 0 auto;
   }
-  .footerLower {
-    /* section2 styling it contains the rest of design with upper and lower subsection */
-    height: 550px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between to seperate upper and lower section with extra space */
-    /* justify-content: space-between; */
-    padding-top: 30px;
-  }
-  .upper {
-    display: flex;
-    height: 400px;
-    margin-bottom: 40px;
-    flex-direction: column;
-  }
-
   .corporate {
-    width: 100%;
-    height: 250px;
-    padding-right: 40px;
-    margin-right: 40px;
-    padding-top: 5px;
-    border: none;
-    margin-bottom: 20px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
   }
   .corporate > h2 {
-    /* corparate heading styling */
-    width: fit-content;
-    color: white;
-    font-size: 20px;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 400;
-    border-bottom: 2px solid;
-    border-image: linear-gradient(to right, cyan, blue, yellow) 1;
-    padding-bottom: 10px;
+    font-size: 18px;
   }
   .corporate > p {
-    /* corparate contents styling */
-    color: #939393;
     font-size: 16px;
-    margin-bottom: 5px;
   }
-  .subSection21 {
-    /* subsection21 is 75% of the upper section */
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    /* wrap to wrap extra content to bottom */
-  }
-  .indiSection {
-    width: calc(25% - 10px);
-    /* every individual section maintaining 25% owidth of subSection21 */
-    margin-right: 10px;
-
-    padding-right: 10px;
-    display: flex;
-    flex-direction: column;
-  }
-  .indiSection > h2 {
-    /* individual section heading styling */
-    width: fit-content;
-    color: white;
-    font-size: 18px;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 400;
-    border-bottom: 2px solid;
-    /* border image use to apply linear gradient on border */
-    border-image: linear-gradient(to right, cyan, blue, yellow) 1;
-    padding-bottom: 10px;
-  }
-
   .indiSection > p {
-    /* individual section content styling */
-    position: relative;
-    color: rgba(255, 255, 255, 0.736);
-    font-size: 14px;
-    margin-bottom: 10px;
-    width: fit-content;
-    cursor: pointer;
+    font-size: 16px;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .container {
-    max-width: 400px;
+    max-width: 576px;
     margin: 0 auto;
   }
-  .footerLower {
-    /* section2 styling it contains the rest of design with upper and lower subsection */
-    height: 750px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between to seperate upper and lower section with extra space */
-    /* justify-content: space-between; */
-    padding-top: 30px;
+  .section1 {
+    background-color: #151515;
+  }
+  .footerUpper {
+    justify-content: space-around;
+    border-bottom: 2px solid white;
+    padding: 45px 0;
   }
   .upper {
-    display: flex;
-    height: 600px;
-    margin-bottom: 40px;
     flex-direction: column;
   }
-
   .corporate {
     width: 100%;
-    height: 150px;
-    padding-right: 40px;
-    margin-right: 40px;
-    padding-top: 5px;
-    border: none;
+    border: 0px;
+    height: auto;
     margin-bottom: 20px;
-  }
-  .corporate > h2 {
-    /* corparate heading styling */
-    width: fit-content;
-    color: white;
-    font-size: 20px;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 400;
-    border-bottom: 2px solid;
-    border-image: linear-gradient(to right, cyan, blue, yellow) 1;
-    padding-bottom: 10px;
-  }
-  .corporate > p {
-    /* corparate contents styling */
-    color: #939393;
-    font-size: 16px;
-    margin-bottom: 5px;
+    padding-top: 0px;
   }
   .subSection21 {
-    /* subsection21 is 75% of the upper section */
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    /* wrap to wrap extra content to bottom */
   }
   .indiSection {
-    width: calc(50% - 10px);
-    /* every individual section maintaining 25% owidth of subSection21 */
-    margin-right: 10px;
-
-    padding-right: 10px;
-    display: flex;
-    flex-direction: column;
-  }
-  .indiSection > h2 {
-    /* individual section heading styling */
-    width: fit-content;
-    color: white;
-    font-size: 18px;
+    width: calc(50% - 20px);
+    padding-top: 0px;
     margin-bottom: 20px;
-    text-transform: uppercase;
-    font-weight: 400;
-    border-bottom: 2px solid;
-    /* border image use to apply linear gradient on border */
-    border-image: linear-gradient(to right, cyan, blue, yellow) 1;
-    padding-bottom: 10px;
-  }
-
-  .indiSection > p {
-    /* individual section content styling */
-    position: relative;
-    color: rgba(255, 255, 255, 0.736);
-    font-size: 14px;
-    margin-bottom: 10px;
-    width: fit-content;
-    cursor: pointer;
   }
   .lower {
-    height: 100px;
-    border-top: 1px solid #ffffff70;
-    display: flex;
-    /* justify-content: space-between use to have space between lower right and lower left containers */
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    padding: 25px 0;
   }
   .lowerLeft {
-    margin: auto 0px;
-    display: flex;
-  }
-  .lowerLeft > p {
-    color: #ffffff90;
-    font-size: 18px;
-    margin-right: 20px;
-    cursor: pointer;
-  }
-  .lowerLeft > p:hover {
-    text-decoration: underline;
-  }
-
-  .lowerRight {
-    margin: auto 0px;
-  }
-  /* copyright styling */
-  .lowerRight > p {
-    color: white;
-    font-size: 20px;
+    margin: 10px;
   }
 }
